# BachelorThesis

./: .gitmodules  README.md  pyproject.toml
src/baselines/: justext.py
src/data/: dataset.py  fundus_scrape32k.py  label_inducer.py  preprocess.py  test_local.py
src/models/lstm/: lstm_classifier.py
