[project]
name = "bachelorthesis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "justext>=3.0.2",
    "lark>=0.12.0",
    "lxml>=6.1.0",
    "mineru-html",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]

[tool.uv.sources]
mineru-html = { git = "https://github.com/opendatalab/MinerU-HTML" }
